<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="peluq"
            type="com.example.cristiangiron.appcanino.models.Peluqueria01"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.cristiangiron.appcanino.ListaPeluquerias">


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/margin_button"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_left"
            app:cardBackgroundColor="@color/colorLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar2"
                    android:layout_width="@dimen/margin_button"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_button"
                    android:layout_marginRight="@dimen/margin_button"
                    android:layout_marginTop="@dimen/margin_left"
                    android:background="@color/colorLogin"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:popupTheme="@style/Theme.AppCompat.Light"
                    app:theme="@style/ToolbarCard" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="@dimen/margin_button"
                    android:layout_height="@dimen/marginlayout"
                    android:layout_marginTop="@dimen/margin_button"
                    android:background="@color/colorAccent"
                    android:scaleType="centerCrop"
                    app:imgUrl="@{peluq.image}"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="@dimen/margin_button"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_left"
                    android:layout_marginEnd="@dimen/margin_left"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:text="@{peluq.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                    android:textColor="@color/color_res"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/huellas" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="@dimen/margin_height"
                    android:layout_height="@dimen/margin_height"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_left"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView10"
                    app:srcCompat="@drawable/ic_today" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="@dimen/margin_height"
                    android:layout_height="@dimen/margin_height"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_left"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView11"
                    app:srcCompat="@drawable/ic_time" />

                <TextView
                    android:id="@+id/textFecha"
                    android:layout_width="@dimen/margin_button"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_left"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:text="@{peluq.fecha}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintLeft_toRightOf="@+id/imageView11"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/date" />

                <TextView
                    android:id="@+id/textHora"
                    android:layout_width="@dimen/margin_button"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_left"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:text="@{peluq.hora}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toRightOf="@+id/imageView12"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/time_1" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="@dimen/margin_button"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_left"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:text="@{peluq.direccion}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintLeft_toRightOf="@+id/imageView"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/direpeluditos" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/margin_height"
                    android:layout_height="@dimen/margin_height"
                    android:layout_marginBottom="@dimen/margin_left"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView12"
                    app:srcCompat="@drawable/ic_location_on" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>

